# markdown-server-hs

./: .gitignore  README.md  markdown-server-hs.cabal  stack.yaml
app/: FSNotify.hs  Main.hs
javascript/: package.json
javascript/src/: index.js
src/: DirWatch.hs  FileUtils.hs  HtmlUtils.hs
templates/: simple.tpl
