name:                markdown-server-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/diskshima/markdown-server-hs#readme
license:             MIT
license-file:        LICENSE
author:              Daisuke Shimamoto
maintainer:          diskshima@gmail.com
copyright:           2017 Daisuke Shimamoto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable markdown-server-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , cmark
                     , directory
                     , filepath
                     , markdown-server-hs
                     , snap
                     , snap-core
                     , snap-server
                     , string-conversions
                     , text
                     , utf8-string
  default-language:    Haskell2010

test-suite markdown-server-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , markdown-server-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/markdown-server-hs
