name:                markdown-server-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/diskshima/markdown-server-hs#readme
license:             MIT
license-file:        LICENSE
author:              Daisuke Shimamoto
maintainer:          diskshima@gmail.com
copyright:           2017 Daisuke Shimamoto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010

executable markdown-server-hs-exe
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       FileUtils
                     , DirWatch
                     , HtmlUtils
  build-depends:       base
                     , binary
                     , blaze-builder
                     , bytestring
                     , cmark
                     , directory
                     , filepath
                     , fsnotify
                     , heist
                     , lens
                     , markdown-server-hs
                     , snap
                     , snap-core
                     , snap-server
                     , string-conversions
                     , system-fileio
                     , system-filepath
                     , text
                     , uri-encode
                     , utf8-string
                     , websockets
                     , websockets-snap
                     , xmlhtml
  default-language:    Haskell2010

executable fsnotifytext
  hs-source-dirs:      app
                     , src
  main-is:             FSNotify.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       DirWatch
  build-depends:       base
                     , fsnotify
  default-language:    Haskell2010

test-suite markdown-server-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , markdown-server-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/markdown-server-hs
